# LZW

./: CMakeLists.txt  README.md  description.md  launching.md  main.cpp  tests.md  theory.md
include/: BinaryFile.hpp  LZW.hpp
sources/: BinaryFile.cpp  LZW.cpp
tests/: CMakeLists.txt  tests.cpp
tests/Test10/: Test10.ans  Test10.lzw
tests/Test11/: Test11.ans  Test11.lzw
tests/Test12/: Test12.ans  Test12.lzw
tests/Test13/: Test13.ans  Test13.lzw
tests/Test14/: Test14.ans  Test14.lzw
tests/Test15/: Test15.ans  Test15.lzw
tests/Test16/: Test16.ans  Test16.lzw
tests/Test17/: Test17.ans  Test17.lzw
tests/Test18/: Test18.ans  Test18.lzw
tests/Test19/: Test19.ans  Test19.lzw
tests/Test2/: Test2.ans  Test2.lzw
tests/Test20/: Test20.ans
tests/Test3/: Test3.lzw
tests/Test4/: Test4.ans  Test4.lzw
tests/Test5/: Test5.lzw
tests/Test6/: Test6.ans  Test6.lzw
tests/Test7/: Test7.ans  Test7.lzw
tests/Test8/: Test8.ans  Test8.lzw
tests/Test9/: Test9.ans  Test9.lzw
